Closed
Bug 1628922
Opened 6 years ago
Closed 5 years ago
Support landmarks in Fenix with Talkback on Android
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla77
| Tracking | Status | |
|---|---|---|
| firefox77 | --- | fixed |
People
(Reporter: asa, Assigned: eeejay)
Details
(Keywords: parity-chrome)
Attachments
(1 file)
With Chrome on Android I can swipe between landmarks using the Landmarks item in the Local Context Menu. With Fenix on Android I cannot because there is no Landmarks item in the Local Context Menu.
Steps to reproduce:
Start Talkback
Launch Firefox
Visit https://www.w3.org/TR/wai-aria-practices/examples/landmarks/main.html
Swipe up then right to get the LCM
Results:
No Landmarks item in the LCM
Expected results:
Landmarks item in the LCM
Updated•5 years ago
|
OS: Unspecified → Android
Priority: -- → P2
Hardware: Unspecified → All
Updated•5 years ago
|
Keywords: parity-chrome
| Assignee | ||
Comment 1•5 years ago
|
||
Added a traveral rule and piped through xml-roles as role descriptions.
Updated•5 years ago
|
Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ced8d2a68d34
Support landmark navigation in GeckoView. r=Jamie
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Comment 4•5 years ago
|
||
Asa, does this need to be uplifted to a different branch to make the Fenix 1.0 release? Or is it OK to ride the 77 train?
Flags: needinfo?(asa)
| Reporter | ||
Comment 5•5 years ago
|
||
This can ride the train. Fenix launch will get 77 changes, and probably 78 changes.
Flags: needinfo?(asa)
You need to log in
before you can comment on or make changes to this bug.
Description
•