Bug 1628922 - Support landmark navigation in GeckoView. r=Jamie

Added a traversal rule and piped through xml-roles as role descriptions.

Differential Revision: https://phabricator.services.mozilla.com/D70950